--- a/src/App.css
+++ b/src/App.css
@@ -90,4 +90,20 @@ nav a.nav-link{
     display: none;
   }
 }
+/*========About================*/
+.margin{
+  margin-top: 70px;
+  margin-bottom: 70px;
+}
+.heading{
+  color: orange;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+.aboutimg{
+  border-radius: 100%;
+  height: 350px;
+  width: 350px;
+  border: 5px solid black;
+}
 
